Terumo Partdev/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Check_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>nsebastian 11/12/2015: This field is set when there is a duplicate Contact in the system (through Trigger).</description>
        <label>Check Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_ccit1__c</fullName>
        <description>Used to identify the gender of the contact</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIDDEN_LastName_Email__c</fullName>
        <description>nsebastian 11/5/2015 : This is a hidden field for storing the combination of last name and email to check for duplicates.</description>
        <label>LastName &amp; Email</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Email_ccit1__c</fullName>
        <description>Used to captured an alternative email for a contact, labelled as &apos;Other&apos; to allow for flexibility</description>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>HYPERLINK(&quot;/acc/account_hierarchy.jsp?id=&quot;&amp;AccountId, &quot;Show Hierarchy&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>